# sqlcipher-tool

./: .gitignore  README.md  index.html  my-changes.patch  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.vue  main.ts  style.css  tailwind.config.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: build.rs  commands.rs  database.rs  main.rs  models.rs
src/assets/: global.css
src/components/: DataComparison.vue  Database.vue  DatabaseConnection.vue  DatabaseExplorer.vue  Profile.vue  SchemaComparison.vue  Settings.vue  Subscription.vue  TableDetailPopup.vue  TableViewer.vue
src/services/: databaseService.ts
