[package]
name = "sqlcipher-tool"
version = "0.1.0"
description = "SQLCipher Database Schema Comparison Tool"
authors = ["you"]
license = ""
repository = ""
default-run = "sqlcipher-tool"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-opener = "2.5.0"
tauri-plugin-dialog = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLCipher dependencies - same for all platforms
rusqlite = { version = "0.32", features = ["bundled", "sqlcipher", "bundled-sqlcipher"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher", "bundled"] }
openssl = { version = "0.10", features = ["vendored"] }

tokio = { version = "1.0", features = ["full", "time"] }
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.22.1"

[profile.release]
lto = true
panic = "abort"

# Windows-specific build configuration
[target.'cfg(windows)'.build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "target-feature=+crt-static"]

[features]
custom-protocol = [ "tauri/custom-protocol" ]
# SQLCipher features for easier building
sqlcipher = ["rusqlite/bundled-sqlcipher"]
default = ["sqlcipher"]
