[package]
name = "sqlcipher-tool"
version = "0.1.0"
description = "SQLCipher Database Schema Comparison Tool"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-opener = "2.5.0"
tauri-plugin-dialog = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

rusqlite = { version = "0.32", features = ["bundled", "sqlcipher", "bundled-sqlcipher"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher", "bundled"] }

tokio = { version = "1.0", features = ["full", "time"] }
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.22.1"

[target.'cfg(windows)'.dependencies]
openssl = "0.10"

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
lto = true
panic = "abort"

[features]
custom-protocol = ["tauri/custom-protocol"]
