[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-opener = "2.5.0"
tauri-plugin-dialog = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CORRECTED: Use regular SQLite without SQLCipher for now
rusqlite = { version = "0.32.1", features = ["bundled"] }

# Remove libsqlite3-sys - let rusqlite handle it
# libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher", "bundled"] }

# Use vendored OpenSSL for all platforms
openssl = { version = "0.10", features = ["vendored"] }

anyhow = "1.0"
tokio = { version = "1.0", features = ["rt", "macros"] }
thiserror = "1.0"
base64 = "0.22.1"

[profile.release]
lto = true
panic = "abort"

[features]
custom-protocol = [ "tauri/custom-protocol" ]

# Remove the sqlcipher feature and default settings
